--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
-<!-- Log 2016/03/12 -->
+<!-- Log 2016/03/21 -->
+Usb charge fix
+Updated cm source
+
+<!-- Log 2016/03/11 -->
 
 Initial OTA bringup
